@@ -9,6 +9,7 @@ Version 2.01.10 -
   Annotate, tidy and extend list.h.
   Alignment tidying.
   Make clvmd work around some "bugs" in gulm's node state notifications.
+  Tidy clvmd's SIGHUP handler
 
 Version 2.01.09 - 4th April 2005
 ================================
